syntax = "proto3";

package users;

service UserServices {
    rpc Create (Create) returns (User);
    rpc GetUsers (Void) returns (AllUsers);
    rpc DeleteUser (OnlyId) returns (Void);
    rpc UpdateUser (Update) returns (User);
}

// message

message Void {}
message OnlyId {
    string id = 1;
}
    message Update {
        string id = 1;
        optional User data = 2;
    }
    message Create {
        
         string email = 1;
         string password = 2;
    }
    message User {
         optional string id = 1;
         optional string email = 2;
         optional string password = 3;
      }
      message AllUsers {
        repeated User data = 1;
    } 